fixed horizontal scroll on mobile, added accesibility to menu

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
 	text-align: center;
+	overflow: hidden;
 }
 
 /* Styling gallery for mobile view */
