--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,6 +4,7 @@
 	padding: 8px 14px;
 	align-items: center;
 	z-index: 2;
+	position: relative;
 }
 
 .header__logo {
